--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "homepage": "https://github.com/Siddhant-vardhansingh/namaste-react#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
